[package]
name = "windmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
home = "0.5.9"
iced = { version = "0.10.0", features = ["canvas"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
